Fixed page jumping issue

--- a/twraps/src/styles/carousel.scss
+++ b/twraps/src/styles/carousel.scss
@@ -3,8 +3,9 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    min-height: 99.5vh;
     position: absolute;
-    z-index: -1;
+    z-index: -10;
 //    .arrow{
 //     position: absolute;
 //     top: 40%;
@@ -24,15 +25,19 @@
 //     right:32px;
 //     }
    .slide{
-    opacity: 0;
-    
+        position: absolute;
+        z-index: -100;
+        width: 100vw;
+        opacity: 0;
+        max-height: 93vh;
+        height: 93vh;
     img{
         width: 100vw;
         max-height: 93vh;
         height: 93vh;
         padding-top:7vh;
         object-fit: cover;
-        overflow: hidden;
+        // overflow: hidden;
     }
    }
    .active{
