--- a/twraps/src/styles/footer.scss
+++ b/twraps/src/styles/footer.scss
@@ -19,6 +19,9 @@
     .footerLinks{
         a{
             margin:.5em 0;
+            font-weight: 500;
+            font-size: 1.2em;
+            letter-spacing: .1em;
             text-decoration: none;
             color:white;
         }
@@ -26,6 +29,9 @@
     .footerContact{
         h4{
             margin:.5em 0;
+            font-weight: 500;
+            font-size: 1.2em;
+            letter-spacing: .1em;
         }
         .number{
             margin:.5em 0;
@@ -51,9 +57,12 @@
             }
         }
     }
-    .footerServices{
+    .footerAbout{
         h4{
             margin:.5em 0;
+            font-weight: 500;
+            font-size: 1.2em;
+            letter-spacing: .1em;
         }
         p{
             margin:.5em 0;
