--- a/twraps/src/styles/gallery.scss
+++ b/twraps/src/styles/gallery.scss
@@ -4,14 +4,25 @@
     color: #636363;
     text-align: center;
     font-size: 2em;
-    button{
-        height: 2em;
 
+    .gallerySort{
+        display: flex;
+        justify-content: space-evenly;
+        
+        .buttonSelect{
+            cursor: pointer;
+            h4{
+                font-size: .8em;
+            }
+            i{
+                font-size: .6em;
+            }
+        }
     }
     .galleryImg{
 
         .img{
-            max-width: 100vw;
+            width: 100vw;
         }
     }
 }
